fixed styling on about page info boxes / added link back to home page

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
     <div class="container about-page">
       <header>
         <div class="nav">
-          <img src="img/lambda-black.png" alt="" /> <a href="#">Home</a>
-          <a href="./about.html">About</a> <a href="#">Products</a>
-          <a href="#">Blog</a> <a href="#">Contacts</a>
+          <img src="img/lambda-black.png" alt="" />
+          <a href="./index.html">Home</a> <a href="#">About</a>
+          <a href="#">Products</a> <a href="#">Blog</a> <a href="#">Contacts</a>
         </div>
         <div class="header-img"><img src="img/jumbo-about.png" alt="" /></div>
       </header>
@@ -37,7 +37,7 @@
         </div>
       </section>
       <section class="about-content">
-        <div class="about-box1">
+        <div class="about-box">
           <img src="img/about-plan.png" alt="strategy" />
 
           <h2>Strategy</h2>
@@ -48,7 +48,7 @@
           </p>
           <button type="button" name="button">Learn More</button>
         </div>
-        <div class="about-box2">
+        <div class="about-box">
           <img src="img/about-working.png" alt="strategy" />
 
           <h2>How We Work</h2>
@@ -60,7 +60,7 @@
 
           <button type="button" name="button">Learn More</button>
         </div>
-        <div class="about-box3">
+        <div class="about-box">
           <img src="img/about-office.png" alt="strategy" />
 
           <h2>Places We Work</h2>
@@ -70,7 +70,7 @@
           </p>
           <button type="button" name="button">Learn More</button>
         </div>
-        <div class="about-box4">
+        <div class="about-box">
           <img src="img/about-meeting.png" alt="strategy" />
 
           <h2>Collaboration</h2>
