fixed last paragraph on about page

--- a/about.html
+++ b/about.html
@@ -80,11 +80,18 @@
           </p>
           <button type="button" name="button">Learn More</button>
         </div>
-        Let's Work Together Leverage agile frameworks to provide a robust
-        synopsis for high level overviews. Iterative approaches to corporate
-        strategy foster collaborative thinking to further the overall value
-        proposition. Organically grow the holistic world view of disruptive
-        innovation via workplace diversity and empowerment.
+        <section>
+          <div class="closing-p">
+            <h2>Let's Work Together</h2>
+            <p>
+              Leverage agile frameworks to provide a robust synopsis for high
+              level overviews. Iterative approaches to corporate strategy foster
+              collaborative thinking to further the overall value proposition.
+              Organically grow the holistic world view of disruptive innovation
+              via workplace diversity and empowerment.
+            </p>
+          </div>
+        </section>
       </section>
       <footer>
         <nav>
