style fixes to home and about page

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
           <button type="button" name="button">Learn More</button>
         </div>
-        <div class="about-box">
+        <div class="about-box last-box">
           <img src="img/about-office.png" alt="strategy" />
 
           <h2>Places We Work</h2>
@@ -70,7 +70,7 @@
           </p>
           <button type="button" name="button">Learn More</button>
         </div>
-        <div class="about-box">
+        <div class="about-box last-box">
           <img src="img/about-meeting.png" alt="strategy" />
 
           <h2>Collaboration</h2>
