--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
         <div class="nav">
           <img src="img/lambda-black.png" alt="" />
           <a href="./index.html">Home</a> <a href="#">About</a>
-          <a href="#">Products</a> <a href="#">Blog</a> <a href="#">Contacts</a>
+          <a href="#">Products</a> <a href="#">Blog</a>
+          <a href="./contact.html">Contacts</a>
         </div>
         <div class="header-img"><img src="img/jumbo-about.png" alt="" /></div>
       </header>
