--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav">
           <img src="img/lambda-black.png" alt="" /> <a href="#">Home</a>
           <a href="./about.html">About</a> <a href="#">Products</a>
-          <a href="#">Blog</a> <a href="#">Contacts</a>
+          <a href="#">Blog</a> <a href="./contact.html">Contacts</a>
         </div>
         <div class="header-img"><img src="img/jumbo.jpg" alt="" /></div>
       </header>
