--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Sprint Challenge - Home</title>
+    <title>Sprint Challenge - Contact</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
@@ -39,6 +39,7 @@
           </p>
         </div>
       </section>
+      <div class="contact-form-header"><h2>CONTACT FORM</h2></div>
       <div class="contact-form">
         <form action="#">
           <div class="names-contact">
@@ -47,7 +48,7 @@
               type="text"
               id="fname"
               name="firstname"
-              placeholder="Your name.."
+              placeholder="Your name..."
             />
 
             <label for="lname">Last Name</label>
@@ -55,7 +56,7 @@
               type="text"
               id="lname"
               name="lastname"
-              placeholder="Your last name.."
+              placeholder="Your last name..."
             />
           </div>
           <div class="email-country-contact">
@@ -64,7 +65,7 @@
               type="text"
               id="email"
               name="email"
-              placeholder="Enter your email address.."
+              placeholder="Enter your email address..."
             />
 
             <label for="country">Country</label>
@@ -81,11 +82,10 @@
               type="type-box"
               id="subject"
               name="subject"
-              placeholder="Write something.."
+              placeholder="Write something..."
             ></textarea>
-
-            <input type="submit" value="Submit" />
           </div>
+          <input class="contact-button" type="submit" value="Submit" />
         </form>
       </div>
       <footer>
