--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="container about-page">
       <header>
         <div class="nav">
-          <img src="img/lambda-black.png" alt="" />
+          <a href="./index.html"><img src="img/lambda-black.png" alt=""/></a>
           <a href="./index.html">Home</a> <a href="#">About</a>
           <a href="#">Products</a> <a href="#">Blog</a>
           <a href="./contact.html">Contacts</a>
