--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <div class="container">
       <header>
         <div class="nav">
-          <img src="img/lambda-black.png" alt="" /> <a href="#">Home</a>
-          <a href="./about.html">About</a> <a href="#">Products</a>
-          <a href="#">Blog</a> <a href="./contact.html">Contacts</a>
+          <a href="./index.html"><img src="img/lambda-black.png" alt=""/></a>
+          <a href="./index.html">Home</a> <a href="./about.html">About</a>
+          <a href="#">Products</a> <a href="#">Blog</a>
+          <a href="./contact.html">Contacts</a>
         </div>
         <div class="header-img"><img src="img/jumbo.jpg" alt="" /></div>
       </header>
